--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <title>My app</title>  
-  </head>
-  <body>
-    This is my app!
-    Login form
-  </body>
-</html>
+Overwritten?
