--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     This is my app!
     Login form
+    Had to make a difference in order to stage, commit and merge.
+    Otherwise the merge said up to date even though this file is different on both branches.
   </body>
 </html>
